# C3DGE

./: .gitignore  CMakeLists.txt  README.md
3DGE/: CMakeLists.txt
TesterGame/: CMakeLists.txt
TesterGame/include/: App.hpp  Game.hpp  MovingCamera.hpp  StaticShader.hpp
TesterGame/include/light/: Sun.hpp
TesterGame/include/object/: Cube.hpp  Mongus.hpp  Quad.hpp  TeddyBear.hpp  Tree.hpp
TesterGame/resource/shader/static/: Fragment.glsl  Vertex.glsl
TesterGame/resource/shader/water/: Fragment.glsl  Vertex.glsl
TesterGame/resource/texture/: grass.tga
TesterGame/source/: App.cpp
dependencies/stb_image/: CMakeLists.txt
dependencies/tiny_obj_loader/: CMakeLists.txt
docs/: GameEngine_v0-0-1.vpd
include/: Core.hpp  Game.hpp  iGameLogic.hpp
include/core/: CoreEngine.hpp  CoreEngineDelegate.hpp  GameObject.hpp
include/render/: BaseCamera.hpp  BaseModel.hpp  BaseShader.hpp  Camera.hpp  Mesh.hpp  OpenGLWrapper.hpp  RenderComponent.hpp  RenderEngine.hpp  ShaderProgram.hpp  Vec4DTO.hpp  Vertex.hpp  iGraphicsAPI.hpp
include/tools/: Mat4D.hpp  Quaternion.hpp  Resources.hpp  Time.hpp  Utils.hpp  Vec2D.hpp  Vec3D.hpp
include/ui/: InputState.hpp  Keyboard.hpp  Mouse.hpp  UIEngine.hpp  Window.hpp
resource/material/: tree.mtl
resource/shader/: GenericFragment.glsl  GenericVertex.glsl
resources/shaders/: GenericFragment.glsl  GenericVertex.glsl
source/: App.cpp  Core.cpp  Game.cpp
source/core/: CoreEngine.cpp  GameObject.cpp
source/render/: BaseCamera.cpp  BaseModel.cpp  BaseShader.cpp  Camera.cpp  Mesh.cpp  OpenGLWrapper.cpp  RenderComponent.cpp  (+3 more)
(+51 files in other folders)
